updated search button to use font awesome icon

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,7 +8,7 @@
 }
 
 #header{
-    background-color: grey;
+    background-color: black;
     text-align: center;
     color: white;
     padding-top: 10px;
