--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,3 +20,22 @@
 
 }
     
+
+.footer {
+    flex-shrink: 0;
+  }
+    
+  footer{
+        position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          text-align: center;
+          background-color: Black;
+          color: #999999;
+          height: 50px;
+          border-top: 8px solid #017cfb;
+          line-height: 60px;
+          font-size: small;
+    }
+  
